--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,5 +13,6 @@
 </aside>
 
 <header>
+	<img src="{{ site.url }}/_pages/Resources/app.png" />
 	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
 </header>
