--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,5 +14,5 @@
 
 <header>
 	<img src="{{ site.url }}/_pages/Resources/app.png" />
-	<h1><a href="{{ site.baseurl }}">{{ site.title }} et moi</a></h1>
+	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
 </header>
