--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -37,7 +37,8 @@ a:hover {
 	text-decoration: underline;
 }
 header {
-	background: $header;
+	background-color: #159957;
+	background-image: linear-gradient(120deg, #155799, #159957);
 	padding: 0px 15px;
 	text-align: center;
 	margin: 50px 0 0;
