--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
 	<div class="container">
 		<nav>
 			<ul>
-				{% for page in site.pages %} {% if page.title %}
+				{% assign sorted_pages = site.pages | sort:"order" %}
+				{% for page in sorted_pages %} {% if page.title %}
 				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
 			</ul>
