--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 			<ul>
 				{% assign sorted_pages = site.pages | where:"order" | sort:"order" %}
 				{% for page in sorted_pages %} {% if page.title %}
-				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title page.order }}</a></li>
 				{% endif %} {% endfor %}
 			</ul>
 			</li>
