--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<nav>
 			<ul>
-				{% assign sorted_pages = site.pages | where:"order" | sort:"order" %}
+				{% assign sorted_pages = site.pages | sort:"order" %}
 				{% for page in sorted_pages %} {% if page.title %}
 				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title page.order }}</a></li>
 				{% endif %} {% endfor %}
