--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
 		<nav>
 			<ul>
 				{% assign sorted_pages = site.pages | sort:"order" %}
-				{% for page in sorted_pages %} {% if page.title %}
-				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title page.url }}</a></li>
+				{% for page in sorted_pages %} {% if page.title and page.order %}
+				<li><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
 				{% endif %} {% endfor %}
 			</ul>
 			</li>
